--- a/src/app/components/loading/loading.component.scss
+++ b/src/app/components/loading/loading.component.scss
@@ -1,5 +1,5 @@
 .loading {
-    margin: 0 auto;
-    text-align: center;
-    opacity: 0.7;
+  margin: 0 auto;
+  opacity: .7;
+  text-align: center;
 }
