--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
                 <div class="col-xs-12 text-center">
                   <img [src]="profileImagePath"/>
                 </div>
-                <h4 class="col-xs-12 text-center">{{user.firstName}} {{user.lastName}}</h4>
+                <h4 class="col-xs-12 text-center">{{user.name}}</h4>
               </div>
 
               <div class="navigation-menu-user-logged-out-container" *ngIf="!user">
