--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,6 +1,6 @@
 <div class="comments-container" [ngClass]="{'addition-padding': !isFooterVisible && userId, 'small-addition-padding': !userId}">
-  <div class="row">
-    <div class="col-xs-12">
+  <div class="ui centered grid">
+    <div class="fourteen wide phone">
       <h4 class="chat-title">{{'assignment.comments.title' | translate}}</h4>
     </div>
   </div>
