--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -11,8 +11,7 @@
         <input maxlength="256" (keyup.enter)="onEnterKeyUp()" class="forgot-password-form-text-input form-control material-input fs-m0" type="text" placeholder="{{'forgot.password.form.email.or.phone.placeholder' | translate}}"
             [formControl]="forgotPasswordForm.controls['email_or_phone']">
 
-        <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'forgot.password.form.email.or.phone.validation.required' | translate}}</div>
-        <api-errors [errors]="apiErrors" attribute="email_or_phone"></api-errors>
+        <input-errors [control]="forgotPasswordForm.controls['email_or_phone']" [apiErrors]="apiErrors" apiAttribute="email_or_phone"></input-errors>
       </div>
       <div class="form-group forgot-password-form-button-container">
         <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'forgot.password.submit.error' | translate}}</div>
