Convert job-list-item.component to Semantic UI

--- a/src/app/components/job-list-item/job-list-item.component.html
+++ b/src/app/components/job-list-item/job-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="job-list-container" (click)="onListItemClick()">
-  <div class="date-container col-xs-4">
+  <div class="date-container">
     {{job.jobDate | date: 'MMM'}}<br/>
     {{job.jobDate | date: 'dd'}}
   </div>
