--- a/src/app/components/job-list-item/job-list-item.component.scss
+++ b/src/app/components/job-list-item/job-list-item.component.scss
@@ -21,13 +21,14 @@
 
 .date-container {
   color: $color-gray-700;
-  text-transform: uppercase;
-  text-align: center;
+  float: left;
   font-size: 18px;
   font-weight: 500;
   line-height: 20px;
+  margin-top: 15px;
+  text-align: center;
+  text-transform: uppercase;
   top: 0.85em;
-  float: left;
   width: 100px;
 }
 .job-meta-details {
