--- a/src/app/components/job-preview/job-preview.component.html
+++ b/src/app/components/job-preview/job-preview.component.html
@@ -1,17 +1,17 @@
-<div class="row">
-  <div class="col-xs-12">
+<div class="ui grid">
+  <div class="forteen wide phone">
     <h4>{{"assignment.assignments.title" | translate}}</h4>
   </div>
 </div>
 
-<div class="row">
-  <div class="col-sm-7 col-md-8">
+<div class="ui grid">
+  <div class="ten wide tablet">
     <div class="job-info-row border">
       <i class="fa fa-file-text-o fa-lg"></i> {{job.description}}
     </div>
   </div>
 
-  <div class="col-sm-5 col-md-4 flex-xs-first flex-sm-last">
+  <div class="six wide tablet">
     <div class="job-info-row with-border">
       <i class="fa fa-calendar fa-lg"></i>{{job.jobDate | date: 'yyyy-MM-dd'}} - {{job.jobEndDate | date: 'yyyy-MM-dd'}}
     </div>
