--- a/src/app/components/pager/pager.component.html
+++ b/src/app/components/pager/pager.component.html
@@ -1,27 +1,27 @@
 <div class="pagination-wrapper">
-  <div class="row pagination-button-container">
-    <div (click)="onFirstPageButtonClick()" class="back-button col-xs-5ths">
+  <div class="ui equal width grid pagination-button-container">
+    <div (click)="onFirstPageButtonClick()" class="back-button column">
       <i class="fa fa-chevron-left navigation-left-arrow" aria-hidden="true"></i>
       <i class="fa fa-chevron-left" aria-hidden="true"></i>
     </div>
 
-    <div class="col-xs-5ths pagination-button">
+    <div class="column pagination-button">
       <a (click)="onPreviousPageButtonClick()">
         <i class="fa fa-chevron-left" aria-hidden="true"></i>
       </a>
     </div>
 
-    <div class="pagination-text col-xs-5ths">
+    <div class="pagination-text column">
       <p> {{currentPage}} / {{lastPage}} </p>
     </div>
 
-    <div class="text-right col-xs-5ths pagination-button">
+    <div class="text-right column pagination-button">
       <a (click)="onNextPageButtonClick()">
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
     </div>
 
-    <div (click)="onLastPageButtonClick()" class="forward-button col-xs-5ths">
+    <div (click)="onLastPageButtonClick()" class="forward-button column">
       <i class="fa fa-chevron-right" aria-hidden="true"></i>
       <i class="fa fa-chevron-right navigation-right-arrow" aria-hidden="true"></i>
     </div>
